added FDA branding
Former-commit-id: 93e08809c1fe849cc473815e0c2c63a870225305

--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -16,7 +16,7 @@
                             Center for Advancing Translational Sciences (NCATS)</a> at the <a
                                 href="http://www.nih.gov" class="ginas-background-link" target="_blank">National
                             Institutes of Health
-                            (NIH)</a>.
+                            (NIH)</a>, in close collaboration with the Food and Drug Administration (FDA).
                             <br/>
                             <br/>
                             <button class="btn btn-primary inverse" ui-sref="gsrs.main">Explore software</button>
