update to agenda
Former-commit-id: 2a0b78a2bb53a99f3cceca9c4f3ee47055078434

--- a/ginas/ginas/ginas-oct2017.html
+++ b/ginas/ginas/ginas-oct2017.html
@@ -1,22 +1,314 @@
 <div ui-view>
-  	<div class="row">
-            <h1 class="text-center">ginas October 2017 meeting</h1>
+  	<div class="row text-center">
+            <h1>Ginas October 2017 Meeting</h1>
+            <h5><b>Wednesday, October 11, 8:00AM - 6:00PM</b></h5>
         </div>
 
     <div class="row text-center">
+        <br/>
         <h4>United States Pharmacopeia Headquarters</h4>
         12601 Twinbrook Parkway<br> Rockville, Maryland<br>
     </div>
 
     <div class="row text-center">
-        <br/><br/><br/>
+        <br/><br/>
         <div class="col-md-8 col-md-offset-2">
-            <h4>More details coming soon. RSVP using this link </h4>
+            <h4>RSVP using the below link </h4>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeF7ioEyWg5VnLuNwaJBRBtiZgkwVBH-I_IzQ99JwpWD7g-Kw/viewform?usp=sf_link" target="_blank">
                 <input type="button" class="btn btn-info" value="RSVP for the meeting"></a>
         </div>
     </div>
+
+
+
+    <div class="row">
+        <br/>
+        <div class="col-md-12"><h3>Wednesday, October 11</h3></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            This meeting is open to public and free to attend. This meeting will be coincide with the GSRS2.0 release.
+        NCATS and FDA developers will be available the day before and/or after this meeting to answer any GSRS related questions.
+        Please use the RSVP link to indicate your availability. Limited visitor parking is available at USP. For Hotel and Transportation information
+            <a href="https://www.usp.org/help/hotel-information" target="_blank">click here</a>
+            <br/><br/>
+        </div></div>
+
+    <div class="row">
+        <br/>
+        <div class="col-md-12"><h3>Thursday, October 12</h3></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            GSRS deployment and development workshop will be held at NCATS from 9:00am until 1:00pm. Please reserve using the RSVP link.
+            <br/><br/>
+        </div></div>
+
+    <div class="row" id="team">
+        <br/>
+        <div class="col-md-12">
+            <h1>Collaborators</h1><br/>
+            <div class="row">
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="ansm logo" src="./assets/images/ansm_logo.gif"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="usp logo" src="./assets/images/bgSiteName.png"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="ema logo" src="./assets/images/download.jpg"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="edqm logo" src="./assets/images/edqmlogo.png"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="ncats logo" src="./assets/images/ncats.png"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="fda logo" src="./assets/images/fda.png"/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="ipec logo" src="./assets/images/IPECFed_RGB_230px.jpg"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="kew gardens logo" src="./assets/images/kew.png"/>
+                </div>
+                <div class="col-xs-2">
+                    <br/>
+                    <br/>
+                    <img class="img-responsive" alt="health canada logo" src="./assets/images/canada.png"/>
+                </div>
+                <div class="col-xs-2">
+                    <br/>
+                    <br/>
+                    <img class="img-responsive" alt="bfarm logo" src="./assets/images/logo-bfarm_en.gif"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="cbgmeb logo" src="./assets/images/logoHome.png"/>
+                </div>
+                <div class="col-xs-2">
+                    <img class="img-responsive" alt="swissmedic logo" src="./assets/images/swissmedic-logo-en.gif"/>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<div class="row panel-group">
+    <br/>
+    <div class="col-md-12"><h2>Agenda</h2></div>
+<!--   <a data-toggle="collapse" href="#viewagenda">View Agenda</a></p>-->
+
+    <div id="viewagenda" >
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Data Standards at CBER / CDER</h4>
+        </div>
+        <div class="col-md-2">
+            <i>Mary Ann Slack </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            The ISO Identification of Medicinal Products (IDMP)</h4>
+        </div>
+        <div class="col-md-2">
+            <i>Vada Perkins</i>
+        </div>
+    </div>
+        <hr>
+
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            The ISO 11238 standard and Implementation Guide </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Larry Callahan / Herman Diederik / Panagiotis Telonis </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Defining Advanced Therapies </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Marcel Hoefnagel</i>
+        </div>
+    </div>
+    <hr>
+
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            G-SRS Version 2.0 and Beyond  </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Tyler Peryea</i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            FDA’s G-SRS System /
+            Defining Excipients and the Inactive Ingredient Dictionary </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Frank Switzer</i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Scilligence Drawing Tools and Helm </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Jinbo Lee</i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            EMA’s SPOR Initiative </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Paulo Alcini / Isabel Chicharo </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            WHO Drug Dictionary </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Malin Jakobsson / Malin Fladvad </i>
+        </div>
+    </div>
+    <hr>
+
+
+
+<!--    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Defining Excipients and the Inactive Ingredient Dictionary </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Presenter Name</i>
+        </div>
+    </div>
+    <hr>-->
+
+<!--    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            NCATS Related Data Efforts: Pharos, Translator </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Presenter Name</i>
+        </div>
+    </div>
+    <hr>-->
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Substances in the USP and the USP Dictionary </h4>
+        </div>
+        <div class="col-md-2">
+            <i> Andrzej Wilk</i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            USP Efforts in Lesser Developed Countries to Harmonize Regulatory Information based on Data Standards </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Daniel Bempong / Jude Nwokike </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Adulterants in Dietery Supplements</h4>
+        </div>
+        <div class="col-md-2">
+            <i>Anton Bzhelyansky </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Daily Med and RX-Norm </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Tammy Powell / Chris Hui </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Allotrope Initiative Standardizing Laboratory Data </h4>
+        </div>
+        <div class="col-md-2">
+            <i>TBD</i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            NLM Resources Pubchem, Chemid and the HSDB </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Evan Bolton / Shannon Jordon / Mitch Miller  </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Excel Tools for G-SRS </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Mitch Miller / Tyler Peryea </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Mapping Adverse Event Reports to Products and Substances </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Sonja Brajovic </i>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            Linking Quality-Pharmacology-Toxicology-and Clinical Medicine to Substances </h4>
+        </div>
+        <div class="col-md-2">
+            <i>Larry Callahan / Tyler Peryea / Noel Southall </i>
+        </div>
+    </div>
+    <hr>
 </div>
+</div></div>
 
 <div class="row">
     <br/><br/><br/>
@@ -28,3 +320,4 @@
         <li><a ui-sref="summer">Summer 2014 meeting</a></li>
     </ul>
 </div>
+
