updated slides for each presentation
Former-commit-id: 5f849d1cd6e07e44e343e88f1486838c55dfb9e0

--- a/ginas/ginas/ginas-oct2017.html
+++ b/ginas/ginas/ginas-oct2017.html
@@ -1,7 +1,7 @@
 <div ui-view>
   	<div class="row text-center">
             <h1>Ginas October 2017 Meeting</h1>
-            <h5><b>Wednesday, October 11, 8:00AM - 6:00PM</b></h5>
+            <h5><b>Wednesday, October 11, 8:30AM - 5:00PM</b></h5>
         </div>
 
     <div class="row text-center">
@@ -10,18 +10,18 @@
         12601 Twinbrook Parkway<br> Rockville, Maryland<br>
     </div>
 
-    <div class="row text-center">
+<!--    <div class="row text-center">
         <br/><br/>
         <div class="col-md-8 col-md-offset-2">
             <h4>RSVP using the below link </h4>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeF7ioEyWg5VnLuNwaJBRBtiZgkwVBH-I_IzQ99JwpWD7g-Kw/viewform?usp=sf_link" target="_blank">
                 <input type="button" class="btn btn-info" value="RSVP for the meeting"></a>
         </div>
-    </div>
+    </div>-->
 
 
 
-    <div class="row">
+   <!-- <div class="row">
         <br/>
         <div class="col-md-12"><h3>Wednesday, October 11</h3></div>
     </div>
@@ -101,216 +101,223 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 <div class="row panel-group">
     <br/><br/><br/>
     <div class="col-md-12"><h2> Agenda</h2>
-        <a ng-click="showAgenda=!showAgenda" class="row text-center"><h3>View Agenda</h3></a>
+       <!-- <a ng-click="showAgenda=!showAgenda" class="row text-center"><h3>View Agenda</h3></a>-->
         <br/><br/>
     </div>
-    <div id="viewagenda" ng-if="showAgenda">
+    <div>
     <div class="row" >
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Data Standards at CBER / CDER</h4>
+        <div class="col-md-6 col-md-offset-2">
+            <h4> <a href="./assets/files/oct2017/1_FDAdatastandardsupdate.pdf"> Data Standards at CBER / CDER
+            <i class="fa fa-file-pdf-o"></i></a></h4>
         </div>
         <div class="col-md-2">
-            <i>Mary Ann Slack </i>
+            <i>Mary Ann Slack (FDA) </i>
         </div>
     </div>
     <hr>
 
     <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            The ISO Identification of Medicinal Products (IDMP)</h4>
+        <div class="col-md-6 col-md-offset-2">
+            <h4> <a href="./assets/files/oct2017/2_GInAS-Vada Perkins.pdf">
+            The ISO Identification of Medicinal Products (IDMP)
+                <i class="fa fa-file-pdf-o"></i></a></h4>
         </div>
         <div class="col-md-2">
-            <i>Vada Perkins</i>
+            <i>Vada Perkins (IDMP)</i>
         </div>
     </div>
+        <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/3_UpdateSPOR.pdf"> EMA’s SPOR Initiative
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Isabel Chicharo (EMA) </i>
+            </div>
+        </div>
         <hr>
 
 
     <div class="row">
         <div class="col-md-6 col-md-offset-2"><h4>
-            The ISO 11238 standard and Implementation Guide </h4>
+            <a href="./assets/files/oct2017/4_USP.pdf">The ISO 11238 standard and Implementation Guide
+            <i class="fa fa-file-pdf-o"></i></a></h4>
         </div>
         <div class="col-md-2">
-            <i>Larry Callahan / Herman Diederik / Panagiotis Telonis </i>
+            <i>Larry Callahan (FDA) </i>
         </div>
     </div>
     <hr>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-2"><h4>
-            Defining Advanced Therapies </h4>
+            <a href="./assets/files/oct2017/5_Hoefnagel.pdf">Defining Advanced Therapies
+            <i class="fa fa-file-pdf-o"></i></a></h4>
         </div>
         <div class="col-md-2">
-            <i>Marcel Hoefnagel</i>
+            <i>Marcel Hoefnagel (CBG/MEB)</i>
+        </div>
+    </div>
+    <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/6_AdoptingDataStandards.pdf"> Integrated Regulatory Information Management-based on Data Standards in LDC
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Jude Nwokike (USP) </i>
+            </div>
+        </div>
+        <hr>
+
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/7_VigiBaseGlobalADR.pdf"> VigiBase and Global ADR reporting and signal detection
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Malin Jakobsson (WHO UMC) </i>
+            </div>
+        </div>
+        <hr>
+
+
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            <a href="./assets/files/oct2017/8_ABzhelyansky.pdf"> USP Adulterants Database
+            <i class="fa fa-file-pdf-o"></i></a></h4>
+        </div>
+        <div class="col-md-2">
+            <i>Anton Bzhelyansky (USP)</i>
+        </div>
+    </div>
+    <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/9_GSRS_UNII_Excipients.pdf"> Inactive Ingredients in FDA-G-SRS
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Frank Switzer (FDA)</i>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/10_GINAS_USAN_AWilk.pdf"> USAN and USP Dictionary
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Andrzej Wilk (USP)</i>
+            </div>
+        </div>
+        <hr>
+
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            <a href="./assets/files/oct2017/11_GSRS2.0.pdf"> G-SRS Version 2.0 and Beyond
+            <i class="fa fa-file-pdf-o"></i></a></h4>
+        </div>
+        <div class="col-md-2">
+            <i>Tyler Peryea (NCATS)</i>
+        </div>
+    </div>
+    <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/12_MAM.pdf"> Excel Tools for G-SRS
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Mitch Miller (Scientific Thinking)  </i>
+            </div>
+        </div>
+        <hr>
+
+
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            <a href="./assets/files/oct2017/13_Scilligence.pdf"> Unified Sketcher for Small Molecules and Macromolecules
+            <i class="fa fa-file-pdf-o"></i></a></h4>
+        </div>
+        <div class="col-md-2">
+            <i>Jinbo Lee (Scilligence)</i>
+        </div>
+    </div>
+    <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/14_AllotropeFoundation.pdf">Standardizing Laboratory Data
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Vinny Antonucci (Allotrope)</i>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-2"><h4>
+                <a href="./assets/files/oct2017/15_Codingsuspect.pdf">Coding of suspect products in FDA AERS adverse event reports
+                <i class="fa fa-file-pdf-o"></i></a></h4>
+            </div>
+            <div class="col-md-2">
+                <i>Sonja Brajovic (FDA) </i>
+            </div>
+        </div>
+        <hr>
+
+   <div class="row">
+        <div class="col-md-6 col-md-offset-2"><h4>
+            <a href="./assets/files/oct2017/16_RxNorm.pdf">Daily Med and RX-Norm
+            <i class="fa fa-file-pdf-o"></i></a></h4>
+        </div>
+        <div class="col-md-2">
+            <i>Tammy Powell (NLM) </i>
         </div>
     </div>
     <hr>
 
 
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            G-SRS Version 2.0 and Beyond  </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Tyler Peryea</i>
-        </div>
-    </div>
-    <hr>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-2"><h4>
-            FDA’s G-SRS System /
-            Defining Excipients and the Inactive Ingredient Dictionary </h4>
+            <a href="./assets/files/oct2017/17_USP.pdf">Pubchem
+            <i class="fa fa-file-pdf-o"></i></a></h4>
         </div>
         <div class="col-md-2">
-            <i>Frank Switzer</i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Scilligence Drawing Tools and Helm </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Jinbo Lee / Tony Yuan</i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            EMA’s SPOR Initiative </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Paulo Alcini / Isabel Chicharo </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            WHO Drug Dictionary </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Malin Jakobsson / Malin Fladvad </i>
+            <i>Evan Bolton (NLM)  </i>
         </div>
     </div>
     <hr>
 
 
 
-<!--    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Defining Excipients and the Inactive Ingredient Dictionary </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Presenter Name</i>
-        </div>
-    </div>
-    <hr>-->
 
-<!--    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            NCATS Related Data Efforts: Pharos, Translator </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Presenter Name</i>
-        </div>
-    </div>
-    <hr>-->
 
     <div class="row">
         <div class="col-md-6 col-md-offset-2"><h4>
-            Substances in the USP and the USP Dictionary </h4>
+            <a href="./assets/files/oct2017/18_InxightDemo.pdf"> Linking Quality-Pharmacology-Toxicology-and Clinical Medicine to Substances
+            <i class="fa fa-file-pdf-o"></i></a></h4>
         </div>
         <div class="col-md-2">
-            <i> Andrzej Wilk</i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            USP Efforts in Lesser Developed Countries to Harmonize Regulatory Information based on Data Standards </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Daniel Bempong / Jude Nwokike </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Adulterants in Dietery Supplements</h4>
-        </div>
-        <div class="col-md-2">
-            <i>Anton Bzhelyansky </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Daily Med and RX-Norm </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Tammy Powell / Chris Hui </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Allotrope Initiative Standardizing Laboratory Data </h4>
-        </div>
-        <div class="col-md-2">
-            <i>TBD</i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            NLM Resources Pubchem, Chemid and the HSDB </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Evan Bolton / Shannon Jordon / Mitch Miller  </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Excel Tools for G-SRS </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Mitch Miller / Tyler Peryea </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Mapping Adverse Event Reports to Products and Substances </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Sonja Brajovic </i>
-        </div>
-    </div>
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6 col-md-offset-2"><h4>
-            Linking Quality-Pharmacology-Toxicology-and Clinical Medicine to Substances </h4>
-        </div>
-        <div class="col-md-2">
-            <i>Larry Callahan / Tyler Peryea / Noel Southall </i>
+            <i>Tyler Peryea (NCATS)</i>
         </div>
     </div>
     <hr>
