fixed a page redirect path error
Former-commit-id: ab896eabf730fa56ca3711c112c5525dd53cfe1a

--- a/ginas/september2015.html
+++ b/ginas/september2015.html
@@ -5,7 +5,7 @@
     <title>page redirect</title>
     <script type="text/javascript">
         function delayer(){
-            window.location ='/ginas/ginas/#/meetings/uppsala/monday';
+            window.location ='/ginas/#/meetings/uppsala/monday';
         }
     </script>
 </head>
