--- a/ginas/index.html
+++ b/ginas/index.html
@@ -95,6 +95,8 @@
 
     }
 }*/
+
+console.log("tyler made a change");
 </script>
 <script data-cfasync="false" type="text/javascript" src="/assets/addons/form-submission-handler.js"></script>
 </body>
