--- a/ginas/gsrs/release.html
+++ b/ginas/gsrs/release.html
@@ -1,3 +1,15 @@
+<style>
+
+    .affix{
+        top:50px;
+        display: block;
+        width:247.75px;
+    }
+    @media (max-width:991px){
+        .affix{width:auto;
+            position:relative;}
+
+</style>
 <div>
     <div class="row ginas-background justify-content-center" style = "align-items: center;">
         <div class="col-md-4 col-sm-12 col-md-offset-1 " align="center">
