--- a/ginas/index.html
+++ b/ginas/index.html
@@ -66,6 +66,7 @@
 <script src="faqs/faqs.controller.js"></script>
 <script src="news/news.controller.js"></script>
 <script src="about/about.controller.js"></script>
+<script src="ginas/filters/year-filter.js"></script>
 <script type="text/javascript">
 
 /*function submitForm() {
