--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -15,6 +15,9 @@
     position:relative;
     height:auto;
 }
+        .ngTruncateToggleText{
+            font-size:120%;
+        }
     </style>
     <div ui-view>
         <div class = "row top-menu">
@@ -32,7 +35,7 @@
             <div class = "col-md-6 col-sm-6">
                 <div class = "test">
                     <span class = "main-title">{{title}}</span><br/>
-                    <img src = "file:///home/andersonng/Documents/GINAS_Git/ginas2/ginas/assets/images/pillIconColor.png"/>
+                    <img src = "assets/images/pillIconColor.png"/>
                 </div>
             </div>
             <div class = "col-md-6 col-sm-6">
@@ -43,14 +46,14 @@
             </div>
         </div>
          <div class = "row">
-           <div class = "col-sm-4 front-menu2" >
-               <u> Get The Code</u>
+           <div class = "col-sm-4 front-menu2"  ng-click = "open()">
+               <i class="fa fa-code" aria-hidden="true"></i> <u>Get The Code</u>
            </div> 
            <div class = "col-sm-4 front-menu2" ng-click = 'redirectExt("https://ginas.ncats.nih.gov/ginas/app")' >
-               <u>  Try The Demo</u>
+               <i class="fa fa-laptop" aria-hidden="true"></i>  <u>Try The Demo</u>
            </div>
-           <div class = "col-sm-4 front-menu2" >
-                <u>  Download</u>
+           <div class = "col-sm-4 front-menu2" ng-click = "redirect('release')">
+               <i class="fa fa-download" aria-hidden="true" ></i> <u>Download</u>
            </div>
         </div>
         <div class="row">
@@ -140,13 +143,11 @@
                     </div>
                     <div class = "row">
                         <div class = "col-sm-6">
-                            <div class = "button" ng-click = "redirect('articles')" style = 'float:left'>
-                                View All News
-                            </div>
+
                         </div>
                         <div class = "col-sm-6">
                             <div class = "button" ng-click = "redirect('articles')" style = 'float:right'>
-                                Read Full Article
+                                View All News
                             </div>
                         </div>
                     </div>
