--- a/ginas/menu/menu.html
+++ b/ginas/menu/menu.html
@@ -31,6 +31,7 @@
     <li ng-class="{active: $state.includes('ginas.faq')}"><a ui-sref="ginas.faq">FAQs</a></li>
     <li ng-class="{active: $state.includes('ginas.articles')}"><a ui-sref="ginas.articles">News</a></li>
     <li ng-class="{active: $state.includes('ginas.release')}"><a ui-sref="ginas.release">Download</a></li>
+    <li ng-class="{active: $state.includes('ginas.api')}"><a ui-sref="ginas.api">API/Documentation</a></li>
 </ul>
         </div>
         <!--/.nav-collapse -->
