--- a/ginas/ginas/gdocTemplate.html
+++ b/ginas/ginas/gdocTemplate.html
@@ -1,12 +1,12 @@
 
-<div ng-init="test1()" class = "row no-gutter">
+<div ng-init="test1()" class = "row no-gutter"  >
   <div class = "col-md-12">
       <div class = "cell">
         <form id = "signup" class="gform form-stacked" id = "signup" method="POST" data-email="example@email.net"
         action="https://script.google.com/macros/s/AKfycbxrOeWl2D--dFY5aGFfGjZ3bMff9YNWWp9tzOND/exec">
           <!-- change the form action to your script url -->
           <div class="form-elements">
-          <div class = "row">
+          <div class = "row" style ="padding-top:10px">
             <div class = "col-xs-12">
               
 
@@ -38,6 +38,7 @@
                     </div>
 
                   <div class = "row">
+
                       <div class = "col-md-6">
 
                         <div class="form-group">
