--- a/ginas/index.html
+++ b/ginas/index.html
@@ -33,7 +33,7 @@
 <!--
 <div class="container-fluid" ng-view></div>
 -->
-<div class="container-fluid" id = "main-div" ui-view></div>
+<div class="container-fluid" id = "main-div" ui-view autoscroll></div>
 <ginas-footer></ginas-footer>
 <!--
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -97,7 +97,7 @@
     }
 }*/
 
-console.log("tyler made a change");
+
 </script>
 <script data-cfasync="false" type="text/javascript" src="assets/addons/form-submission-handler.js"></script>
 </body>
