added changes to newsletter form
Former-commit-id: 215a715beeb8973d4534e04d803db8ee9c4bb2be

--- a/ginas/ginas/gdocTemplate.html
+++ b/ginas/ginas/gdocTemplate.html
@@ -1,12 +1,12 @@
 
-<div ng-init="test1()" class = "row no-gutter"  >
+<div ng-init="test1()" class = "row no-gutter">
   <div class = "col-md-12">
       <div class = "cell">
         <form id = "signup" class="gform form-stacked" id = "signup" method="POST" data-email="example@email.net"
-        action="https://script.google.com/macros/s/AKfycbxrOeWl2D--dFY5aGFfGjZ3bMff9YNWWp9tzOND/exec">
+        action="https://script.google.com/macros/s/AKfycbyAhS5n6x_lSEWrlAOwTPSywKrRVbR9RagTRMVw1C-p9Gbo7Og/exec">
           <!-- change the form action to your script url -->
           <div class="form-elements">
-          <div class = "row" style ="padding-top:10px">
+          <div class = "row" style = "padding-top:10px">
             <div class = "col-xs-12">
               
 
@@ -38,7 +38,6 @@
                     </div>
 
                   <div class = "row">
-
                       <div class = "col-md-6">
 
                         <div class="form-group">
@@ -77,7 +76,7 @@
                                    <label for="Comments">Comments: </label>
                                   </div>
                                   <div class = "col-xs-10">
-                                    <textarea class="form-control" id="Comments" name="Comments" placeholder=""></textarea>
+                                    <textarea class="form-control" id="Comments" name="Comments" placeholder="green"></textarea><br/><br/>
                                 </div>
                               </div>
                             </div>
@@ -93,18 +92,18 @@
 
               </div>
             </div>
-          </div>
+
               <!-- Customise the Thankyou Message People See when they submit the form: -->
               <div class="thankyou_message" style="display:none;min-height:50px">
                 <div class = "row">
                   <div class = "col-md-12">
-                <h3><em>Thanks</em> for contacting us!
-                  We will get back to you soon!</h3>
+                <h3><em>Thanks</em> for subscribing!
+                  We will add you soon!</h3>
                 </div>
 
               </div>
             </div>
-
+      </div>
         </form>
 
         <!-- Submit the Form to Google Using "AJAX" -->
