--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -21,13 +21,13 @@
     </style>
     <div ui-view>
         <div class = "row top-menu">
-            <div class = "col-sm-4 main-menu" ng-class="{ 'active': showGinas}" ng-click="changeView('ginas')">
+            <div class = "col-sm-4 main-menu border" ng-class="{ 'active': showGinas}" ng-click="changeView('ginas')">
                 The Ginas Project
             </div>
-            <div class = "col-sm-4 main-menu"  ng-class="{ 'active': showGsrs}" ng-click="changeView('gsrs')">
+            <div class = "col-sm-4 main-menu border"  ng-class="{ 'active': showGsrs}" ng-click="changeView('gsrs')">
                 G-SRS Software
             </div>
-            <div class = "col-sm-4 main-menu"  ng-class="{ 'active': showTeam}" ng-click="changeView('team')">
+            <div class = "col-sm-4 main-menu  border"  ng-class="{ 'active': showTeam}" ng-click="changeView('team')">
                The Ginas Team
             </div>
         </div>
