fixes to controllers
Former-commit-id: b7117475c2b72060a0d90b64e245e870ebf52c6a

--- a/ginas/gdocTemplate.html
+++ b/ginas/gdocTemplate.html
@@ -1,9 +1,9 @@
   
 <div class = "row no-gutter">
   <div class = "col-md-12">
-      <div class = "cell">
+      <div class = "cell">test
         <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
-        action="https://script.google.com/macros/s/AKfycbxrOeWl2D--dFY5aGFfGjZ3bMff9YNWWp9tzOND/exec">
+        action="https://script.google.com/macros/s/AKfycbyAhS5n6x_lSEWrlAOwTPSywKrRVbR9RagTRMVw1C-p9Gbo7Og/exec">
           <!-- change the form action to your script url -->
 
           <div class="form-elements">
