--- a/ginas/ginas/gdocTemplate.html
+++ b/ginas/ginas/gdocTemplate.html
@@ -1,7 +1,7 @@
 
 <div ng-init="test1()" class = "row no-gutter">
   <div class = "col-md-12">
-      <div class = "cell">
+      <div class = "cell">test
         <form id = "signup" class="gform form-stacked" id = "signup" method="POST" data-email="example@email.net"
         action="https://script.google.com/macros/s/AKfycbyAhS5n6x_lSEWrlAOwTPSywKrRVbR9RagTRMVw1C-p9Gbo7Og/exec">
           <!-- change the form action to your script url -->
