--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -35,7 +35,7 @@
             <div class = "col-md-6 col-sm-6">
                 <div class = "test">
                     <span class = "main-title">{{title}}</span><br/>
-                    <img src = "assets/images/pillIconColor.png"/>
+                    <img src = "assets/images/pillIconTest.svg" height="155"/>
                 </div>
             </div>
             <div class = "col-md-6 col-sm-6">
