--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -70,15 +70,15 @@
                     <div class = "row">
                         <div class = "col-sm-4">
                             
-                             <div class = "date">July 7, 2018</div>
-                                 <h3> <code> G-SRS v2.0</code></h3>
+                             <div class = "date">October 10, 2018</div>
+                                 <h3> <code> G-SRS v2.3.1</code></h3>
                         </div>   
                         <div class = "col-sm-8" >
                              <h4>CHANGELOG</h4>
                             <ul>
-                                <li> fixed issue of structures sometimes losing lychi information when cached</li>
-                                  <li>  fixed inability to remove NA sugar</li>
-                                 <li>   Bug fix for suggestions with white space getting listed multiple times...</li>
+                                <li> Created GSRS Data Dictionary with information on all JSON schema fields </li>
+                                  <li>  Improved user access management for a substance</li>
+                                 <li>   Added Hierarchy View to Browse Substances/Global Search Results...</li>
                                  
                              </ul>  
                         </div> 
